DNA and Eggmorphing effects now scale overlay opacity properly